--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -13,7 +13,7 @@ RUN npm run build
 # -- Deploying Stage
 FROM nginx:alpine
 
-COPY --from=tmfrontend /app/build /usr/share/nginx/html
+COPY --from=build /app/build /usr/share/nginx/html
 
 EXPOSE 80
 
