--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,16 +1,15 @@
 # -- Build stage
-FROM node:18
+FROM node:18 AS build
 
 WORKDIR /app
 
-COPY package*.json .
+COPY package.json .
 
 RUN npm install
 
 COPY . .
 
 RUN npm run build
-
 
 # -- Deploying Stage
 FROM nginx:alpine
